--- a/templates/form/form_theme.html.twig
+++ b/templates/form/form_theme.html.twig
@@ -1,4 +1,5 @@
 {# Thème de formulaire personnalisé pour le design épuré #}
+{% use "form_div_layout.html.twig" %}
 
 {# Champ de base #}
 {% block form_widget_simple %}
